--- a/index.html
+++ b/index.html
@@ -20,81 +20,115 @@
         <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>HOUR</th>
-                    <th>EVENT</th>
-                    <th>SAVE EVENT</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="active">
-                    <td class="hourSensativeBlock" id="9">9AM</td>
-                    <td class="timeSensativeBlock">Anna</td>
-                </tr>
-                <tr>
-                    <td class="hourSensativeBlock" id="10">10AM</td>
-                    <td class="timeSensativeBlock">Debbie</td>
-                </tr>
-                <tr>
-                    <td class="hourSensativeBlock" id="11">11AM</td>
-                    <td class="timeSensativeBlock">John</td>
 
-                </tr>
-            </tbody>
-        </table>
-        <!-- Timeblocks go here -->
-
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour"> 9AM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-10" class="row time-block">
+            <div class="col-md-1 hour"> 10AM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-11" class="row time-block">
+            <div class="col-md-1 hour"> 11AM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-12" class="row time-block">
+            <div class="col-md-1 hour"> 12PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-13" class="row time-block">
+            <div class="col-md-1 hour"> 1PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-14" class="row time-block">
+            <div class="col-md-1 hour"> 2PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-15" class="row time-block">
+            <div class="col-md-1 hour"> 3PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-16" class="row time-block">
+            <div class="col-md-1 hour"> 4PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
+        <div id="hour-17" class="row time-block">
+            <div class="col-md-1 hour"> 5PM
+            </div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
+        </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
     <script type="text/javascript">
-        // console.log(typeof '#11AM') = string
-
-
-
-        /////need to find a way to reference the integer of the TableHourInteger
-        const array = [9, 10, 11, 12, 13, 14, 15, 16, 17]
-
-        var text = $('#11').text();
-        console.log(text)
-        parseInt(text);
-        console.log(typeof text)
 
         var currentDay = moment().format('LLLL');
         $("#currentDay").text(currentDay);
 
+        // listen for save button clicks:
+        $(".saveBtn").on("click", function () {
+            var value = $(this).siblings(".description").val();
+            var time = $(this).parent().attr("id");
+            //save in local storage
+            localStorage.setItem(time, value);
+        });
 
-        var CurrentHour = moment().format('H');
-        // parseInt(CurrentHour);
-        // console.log(a);
-        const CurrentHourInteger = parseInt(CurrentHour);
-        console.log(CurrentHourInteger)
 
-        // const Hour = ('hA')
-        if (CurrentHour > 20) {
-            console.log('LAter')
-        } else {
-            console.log('earlier')
+
+        function hourUpdater() {
+            //get current hour
+            var currentHour = moment().hours();
+            //loop over time blocks
+            $(".time-block").each(function () {
+                var blockHour = parseInt($(this).attr("id").split("-")[1]);
+
+                //check if we've moved past this time
+                if (blockHour < currentHour) {
+                    $(this).addClass("past");
+                }
+                else if (blockHour === currentHour) {
+                    $(this).removeClass("past");
+                    $(this).addClass("present");
+                } else {
+                    $(this).removeClass("past")
+                    $(this).removeClass("present")
+                    $(this).addClass("future");
+
+                };
+
+
+            });
+            for (var i = 9; i < 18; i++) {
+                $(`#hour-${i} .description`).val(localStorage.getItem(`hour-${i}`));
+            }
         }
+        hourUpdater();
 
-        const TableHourInteger = parseInt("23");
-        console.log(typeof TableHourInteger)
-        console.log(TableHourInteger)
-        console.log(TableHourInteger > CurrentHour)
-//         function
-    //    $(".hourSensativeBlock").moment('').isBefore('h A');
+        // $("#hour-9 .description").val(localStorage.getItem("hour-9"));
 
-            //Write completed password to text area of HTML page
+            // var interval = setInterval(hourUpdater, 15000);
+            // console.log(interval);
 
-    // localStorage.setItem("password", UserGeneratedPassword);
-    // let UserGeneratedPasswordStr = localStorage.getItem("password");
-    // passwordTextarea.textContent = UserGeneratedPasswordStr;
     </script>
-
-
 </body>
 
 </html>
